[project]
name = "workout-tracking-api"
version = "0.1.0"
description = "API para seguimiento de ejercicios"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "aiosqlite",
    "sqladmin",
    "python-dotenv",
    "pydantic-settings",
    "fastapi-fastauth[sqlalchemy]",
    "itsdangerous>=2.2.0",
    "werkzeug>=3.1.8",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

requires-python = ">=3.13"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

